# phart

./: .gitignore  .pre-commit-config.yaml  CHANGELOG-1.5.0-to-main.md  EXAMPLES.MD  LAYOUT-STRATEGIES.md  NAME.md  PLAN.md  PYPI-RELEASE-NOTES-2.0.5.md  PYPI-RELEASE-NOTES-2.0.6.md  RAINBOW_COLORING.md  README.md  htmltest.html  htmltest.latex  mathtt.txt  mdtest.latex  mdtest.txt  nxatl,py  pyproject.toml  setup.cfg  text.txt  unixtest.mmd
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: 1-bug.yaml
.github/workflows/: mypy.yaml  publish-pypi.yml  test.yaml  workflow-policy.yml
__includes/: EXAMPLES.MD
_layouts/: default.html
docs/: GHM-LATEX.md  LAYOUT-STRATEGIES.md  cling.md  index.md  mermaid-flowchart-syntax.md  mermaid-phart.md  svg-renderer.md
docs/architecture/: 1sequenceDiagram.mmd  2sequenceDiagram.mmd  cli-runtime-architecture.md  layout-partitioning-spec.md  refactor-latest-dev.md  style-rules-spec.md
docs/cling/: cling.notes-evidence copy.md  cling.release-notes copy.md  cling.release-notes-enriched.evidence.md  cling.release-notes-enriched.md  cling.release-notes-raw.evidence.md  cling.release-notes-raw.md  cling.report.json  cling.report.md  git.diff.txt  git.log.txt  phart.commit-forensics_1.3.0-1.5.0.md  phart.release-note.evidence.md  phart.release-notes.evidence.html  phart.release-notes.evidence.md  phart.release-notes.md  release-notes-enriched.md  release-notes-no-enriched.evidence.md  release-notes-no-enriched.md  release-notes.md
examples/: README.md  TRIADIC_CENSUS.md  balanced_tree.py  basic.py  binary_tree_example.py  bom.ged  bst.dot  bull.py  chess_masters.py  circular.py  cli_demo-collatz.sh  cli_demo-triads.sh  cli_demo.sh  cli_unaware_test.py  cm1.txt  cm4.txt  cm5.txt  collatz.py  debug_subgraph_bboxes.py  dependency_tree.py  directed-triads_test.py  fam_marr.ged  flow_direction_test.py  foo.txt  gedcom.py  gnupg.dot  graph.txt  graph_examples.py  graphlet_generator.py  happy.ged  infratest.dot  internet-digraph.dot  internet-dotapprox.dot  internet-pbp.dot  internet.dot  issue_21.py  issue_7-flow-left-demo.sh  issue_7.py  issue_7.sh  issue_8.py  (+14 more)
examples/docs/: TRIADIC-CENSUS.md
examples/test_output/: fdpclust.dot.mmd  gnupg.dot.mmd  linux-kernel.dot.mmd  nx-complete_graph.py--9--layer_spacing_4-node_spacing_6-vpad_1_hpad_3-shared_ports_none.html  nx-complete_graph.py.html  ordering-test-bidirectional-coalesce.html  ordering-test-bidirectional-separate.html  ordering-test-coalesced-default.html  rainbow-coloring-6-3-5-6-any-coalesce.html  rainbow-coloring-6-3-5-6-any-separate.html  rainbow-coloring-6-3-5-6-minimize-coalesce.html  rainbow-coloring-6-3-5-6-minimize-separate.html  rainbow-coloring-6-3-5-6-none-coalesce.html  rainbow-coloring-6-3-5-6-none-separate.html  sem-path.dot.mmd  test1.htm  test2.2  test2.2.html  test2.html  test3.3.html  test3.4.html  test4.1.html  test4.html  test40.html
examples/test_outputs/: bst.dot.mmd  go-package.dot.mmd  infratest.dot.mmd
mypy-phart.txt/: index.txt
requirements/: all.txt  default.txt  developer.txt  example.txt  extra.txt  svg.txt  test.txt
src/graphscii/: layout.py  renderer.py  styles.py
src/phart/: __init__.py  __main__.py  charset.py  cli.py  encoding.py  layout.py  renderer.py  style_rules.py  styles.py  stylesx.py  svg.py
src/phart/core/: __init__.py  contracts.py
src/phart/io/: __init__.py
src/phart/io/input/: __init__.py  dot.py  graphml.py  loader.py  plantuml.py  python_runner.py
src/phart/io/output/: __init__.py  captured_text.py  dispatcher.py  files.py  pagination.py
src/phart/rendering/: __init__.py  ansi.py  canvas.py  colors.py  nodes.py  output.py  ports.py  routing.py  svg.py
tests/: test_cli.py  test_layout.py  test_options_merge.py  test_performance.py  test_renderer.py  test_styles.py
tools/: generate_requirements.py
