[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phart"
version = "0.1.5"
description = "Python Hierarchical ASCII Representation Tool - Pure Python graph visualization in ASCII, no external dependencies* (*except NetworkX)"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Scott VR", email = "scottvr@gmail.com" }
]
dependencies = [
    "networkx>=2.6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
[project.optional-dependencies]
default = [
]
developer = [
    'pre-commit>=3.2',
    'mypy>=1.1',
]
doc = [
]
example = [
    'pydot>=3.0.1',
]
extra = [
    'pygraphviz>=1.14',
]
test = [
    'pytest>=7.2',
    'pytest-cov>=4.0',
]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=phart --cov-report=term-missing"
filterwarnings = ["error"]

[project.urls]
Homepage = "https://github.com/scottvr/phart"
Repository = "https://github.com/scottvr/phart.git"
Issues = "https://github.com/scottvr/phart/issues"
[tool.hatch.build.targets.wheel]
packages = ["src/phart"]
