[uild-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phart"
dynamic = ["version"]
description = "Python Hierarchical ASCII Representation Tool - Pure Python graph visualization in ASCII, no external dependencies* (*except NetworkX)"
requires-python= ">=3.11"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Scott VR", email = "scottvr@gmail.com" }
]
dependencies = [
    "networkx>=3.3",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
[project.optional-dependencies]
default = [
]
developer = [
    'pre-commit>=3.2',
    'mypy>=1.1',
    'isort',
    'ruff',
]
doc = [
]
examples = [
    'pydot>=3.0.1',
]
extra = [
    "phart[examples]",
    "phart[svg]",
    'pygraphviz>=1.14',
    'scipy',
]
svg = [
    'fonttools>=4.0',
    'matplotlib>=3.7',
]
test = [
    'pytest>=7.2',
    'pytest-cov>=4.0',
    "phart[svg]",
    "phart[examples]",
]
all = [
    "phart[developer]",
    "phart[test]",
    "phart[extra]",
]

[project.scripts]
phart = "phart.cli:main"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=phart --cov-report markdown"
filterwarnings = ["error"]

[project.urls]
Homepage = "https://github.com/scottvr/phart"
Repository = "https://github.com/scottvr/phart.git"
Issues = "https://github.com/scottvr/phart/issues"

[tool.hatch.version]
path = "src/phart/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/phart"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]

ignore = ["F401", "B010", "B904"]
#ignore = ["E501"]
unfixable = ["B"]


# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]
