[metadata]
name = graphscii
author = Scott VR
description = ASCII art graph visualization in pure Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scottvr/graphscii
project_urls =
    Bug Tracker = https://github.com/scottvr/graphscii/issues
