[metadata]
name = phart
author = Scott VR
description = Python Hierarchical ASCII Representation Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scottvr/phart
project_urls =
    Bug Tracker = https://github.com/scottvr/phart/issues

[isort]
profile = black
